--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.6.7",
     "chart.js": "^3.9.1",
-    "vue": "^3.2.37"
+    "typescript": "^4.7.4",
+    "vue": "^3.2.37",
+    "vue-chartjs": "^4.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
+    "tailwindcss": "^3.1.8",
     "vite": "^3.0.1"
   }
 }
